updating the ending for each story arc

--- a/index.html
+++ b/index.html
@@ -74,37 +74,37 @@
           <br>
           <label>What day were you born?<br><span class="blue">(select from the dropdown menu)</span></label>
           <select id="dropdown-day" name="day">
-             <option class="day-select" value="Daleks">1</option>
-             <option class="day-select" value="Cybermen">2</option>
-             <option class="day-select" value="Silurians">3</option>
+             <option class="day-select" value="The Daleks">1</option>
+             <option class="day-select" value="The Cybermen">2</option>
+             <option class="day-select" value="The Silurians">3</option>
              <option class="day-select" value="The Master">4</option>
-             <option class="day-select" value="Sontarans">5</option>
+             <option class="day-select" value="The Sontarans">5</option>
              <option class="day-select" value="Davros">6</option>
-             <option class="day-select" value="Zygons">7</option>
-             <option class="day-select" value="Weeping Angels">8</option>
-             <option class="day-select" value="Vashta Nerada">9</option>
+             <option class="day-select" value="The Zygons">7</option>
+             <option class="day-select" value="The Weeping Angels">8</option>
+             <option class="day-select" value="The Vashta Nerada">9</option>
              <option class="day-select" value="The Silence">10</option>
-             <option class="day-select" value="Family of Blood">11</option>
-             <option class="day-select" value="Judoon">12</option>
-             <option class="day-select" value="Headless Monks">13</option>
-             <option class="day-select" value="Slitheen Family">14</option>
+             <option class="day-select" value="Clara">11</option>
+             <option class="day-select" value="The Judoon">12</option>
+             <option class="day-select" value="The Headless Monks">13</option>
+             <option class="day-select" value="A Slitheen Family">14</option>
              <option class="day-select" value="Missy">15</option>
-             <option class="day-select" value="Daleks">16</option>
-             <option class="day-select" value="Cybermen">17</option>
-             <option class="day-select" value="Silurians">18</option>
+             <option class="day-select" value="The Daleks">16</option>
+             <option class="day-select" value="The Cybermen">17</option>
+             <option class="day-select" value="The Silurians">18</option>
              <option class="day-select" value="The Master">19</option>
-             <option class="day-select" value="Sontarans">20</option>
+             <option class="day-select" value="The Sontarans">20</option>
              <option class="day-select" value="Davros">21</option>
-             <option class="day-select" value="Zygons">22</option>
-             <option class="day-select" value="Weeping Angels">23</option>
-             <option class="day-select" value="Vashta Nerada">24</option>
+             <option class="day-select" value="The Zygons">22</option>
+             <option class="day-select" value="The Weeping Angels">23</option>
+             <option class="day-select" value="The Vashta Nerada">24</option>
              <option class="day-select" value="The Silence">25</option>
-             <option class="day-select" value="Family of Blood">26</option>
-             <option class="day-select" value="Judoon">27</option>
-             <option class="day-select" value="Headless Monks">28</option>
-             <option class="day-select" value="Slitheen Family">29</option>
+             <option class="day-select" value="Clara">26</option>
+             <option class="day-select" value="The Judoon">27</option>
+             <option class="day-select" value="The Headless Monks">28</option>
+             <option class="day-select" value="A Slitheen Family">29</option>
              <option class="day-select" value="Missy">30</option>
-             <option class="day-select" value="Daleks">31</option>
+             <option class="day-select" value="The Daleks">31</option>
            </select>
         </div>
       </div>
@@ -118,11 +118,12 @@
           <select id="dropdown-color" name="color">
              <option class="color-select" value="Earth">Red</option>
              <option class="color-select" value="Galifrey">Orange</option>
-             <option class="color-select" value="Skaro">Yellow</option>
+             <option class="color-select" value="Earth">Yellow</option>
              <option class="color-select" value="New-Earth">Green</option>
-             <option class="color-select" value="Darillium">Blue</option>
-             <option class="color-select" value="Raxacoricofallapatorius">Indigo</option>
-             <option class="color-select" value="Midnight">Violet</option>
+             <option class="color-select" value="Mars">Blue</option>
+             <option class="color-select" value="Galifey">Indigo</option>
+             <option class="color-select" value="New Earth">Violet</option>
+             <option class="color-select" value="Mars">Black</option>
            </select>
         </div>
         <div class="col-md-4 text-center questions">
@@ -167,6 +168,8 @@
               <p class="introduction"></p>
               <br>
               <p class="context"></p>
+              <br>
+              <p class="ending"></p>
           </div>
           <div class="col-md-6 align-itmes-center text-center story-image">
 
