add images for each Doctor

--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
         <div class="col-md-4 text-center questions">
            <br>
           <label>What's Your Doctor Who Name:<br><span class="blue">(be as creative as you want)</span></label>
+          <br>
           <input id="name" name="user-name" type="text" placeholder="Who are you?">
         </div>
         <div class="col-md-4 text-center questions">
          <br>
           <label>What month were you born?<br><span class="blue">(select from the dropdown menu)</span></label>
+          <br>
           <select id="dropdown-month" name="month">
              <option class="month-select" value="Twelfth Doctor">January</option>
              <option class="month-select" value="Eleventh Doctor">February</option>
@@ -73,6 +75,7 @@
         <div class="col-md-4 text-center questions">
           <br>
           <label>What day were you born?<br><span class="blue">(select from the dropdown menu)</span></label>
+          <br>
           <select id="dropdown-day" name="day">
              <option class="day-select" value="The Daleks">1</option>
              <option class="day-select" value="The Cybermen">2</option>
@@ -87,8 +90,8 @@
              <option class="day-select" value="Clara">11</option>
              <option class="day-select" value="The Judoon">12</option>
              <option class="day-select" value="The Headless Monks">13</option>
-             <option class="day-select" value="A Slitheen Family">14</option>
-             <option class="day-select" value="Missy">15</option>
+             <option class="day-select" value="The Weeping Angles">14</option>
+             <option class="day-select" value="The Sontarans">15</option>
              <option class="day-select" value="The Daleks">16</option>
              <option class="day-select" value="The Cybermen">17</option>
              <option class="day-select" value="The Silurians">18</option>
@@ -102,8 +105,8 @@
              <option class="day-select" value="Clara">26</option>
              <option class="day-select" value="The Judoon">27</option>
              <option class="day-select" value="The Headless Monks">28</option>
-             <option class="day-select" value="A Slitheen Family">29</option>
-             <option class="day-select" value="Missy">30</option>
+             <option class="day-select" value="The Zygons">29</option>
+             <option class="day-select" value="The Cybermen">30</option>
              <option class="day-select" value="The Daleks">31</option>
            </select>
         </div>
@@ -171,7 +174,7 @@
               <br>
               <p class="ending"></p>
           </div>
-          <div class="col-md-6 align-itmes-center text-center story-image">
+          <div class="col-md-6 align-itmes-center img-fluid text-center story-image">
 
           </div>
       </div>
