added table for database

--- a/index.html
+++ b/index.html
@@ -156,15 +156,17 @@
         </div>
         </section>
 
+      <!--SUBMIT-->
       <section class="submit-page-1">
         <div class="row">
           <div class="col-md-12 text-center">
             <br>
-            <button id="page1" type="button" class="btn btn-light submit">Submit Your Answers</button>
+            <button id="page1" type="button" class="btn btn-light submit page1">Submit Your Answers</button>
           </div>
       </div>
     </section>
 
+    <!--STORY-->
     <section class="story">
       <div class="row">
           <div class="col-md-6 text-center story-text">
@@ -174,18 +176,46 @@
               <br>
               <p class="ending"></p>
           </div>
-          <div class="col-md-6 align-itmes-center img-fluid text-center story-image">
-
+          <div class="col-md-6 story-image">
+            <br>
+            <button id="list" type="button" class="btn btn-light submit">See List of Adventures</button>
           </div>
       </div>
-
     </section>
+
+    <!--TABLE -->
+    <section class="database-table">
+      <div class="row">
+            <div class="col-md-12">
+               <br>
+                <h2 class="text-center list-title">Database of Adventures</h2>
+              <h6 class="text-center list-title">Create a new adventure <span class="blue link"><u>HERE</u></span></h6>
+                <table class="table table-bordered text-center">
+                   <thead>
+                      <tr>
+                        <th>Name</th>
+                        <th>Doctor</th>
+                        <th>Year</th>
+                        <th>Planet</th>
+                        <th>Tool</th>
+                        <th>With</th>
+                      </tr>
+                </thead>
+                <tbody class="table-body">
+                      <tr class="table-information">
+
+                      </tr>
+                </tbody>
+            </table>
+        </div>
+      </div>
+    </section>
+
 
     <section id="footer">
         <div class="row copyright">
          <br>
        <div class="col-md-12">
-        <br>
         <br>
          <p class="copyright text-center"><strong>Made with a <span class="white"> Sonic Screwdriver </span> by Faith H. Wallace, Ph.D., &copy;  2018 • Follow Me <i class="fab fa-twitter"></i> </strong><a class="twitter-link" href="https://twitter.com/fwallacephd" data-show-count="false">@fwallacephd</a></p>
        </div>
