switch apges update

--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
       <div class="row">
           <div class="col-md-6 text-center story-text">
               <p class="introduction"></p>
-              <br>
+
               <p class="context"></p>
-              <br>
+
               <p class="ending"></p>
           </div>
           <div class="col-md-6 story-image">
             <br>
-            <button id="list" type="button" class="btn btn-light submit">See List of Adventures</button>
+            <button id="list" type="button" class="btn btn-light submit list">See List of Adventures</button>
           </div>
       </div>
     </section>
@@ -188,8 +188,7 @@
       <div class="row">
             <div class="col-md-12">
                <br>
-                <h2 class="text-center list-title">Database of Adventures</h2>
-              <h6 class="text-center list-title">Create a new adventure <span class="blue link"><u>HERE</u></span></h6>
+              <h2 class="text-center list-title">Database of Adventures</h2>
                 <table class="table table-bordered text-center">
                    <thead>
                       <tr>
@@ -214,9 +213,8 @@
 
     <section id="footer">
         <div class="row copyright">
-         <br>
        <div class="col-md-12">
-        <br>
+         <br>
          <p class="copyright text-center"><strong>Made with a <span class="white"> Sonic Screwdriver </span> by Faith H. Wallace, Ph.D., &copy;  2018 • Follow Me <i class="fab fa-twitter"></i> </strong><a class="twitter-link" href="https://twitter.com/fwallacephd" data-show-count="false">@fwallacephd</a></p>
        </div>
       <br>
