added Firebase and display table

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </section>
 
-    <section class="questions-page1">
+    <section class="questions-page1 page">
       <div class="row">
         <div class="col-md-4 text-center questions">
            <br>
@@ -113,7 +113,7 @@
       </div>
     </section>
 
-      <section class="questions-page2">
+      <section class="questions-page2 page">
       <div class="row">
         <div class="col-md-4 text-center question">
            <br>
@@ -157,7 +157,7 @@
         </section>
 
       <!--SUBMIT-->
-      <section class="submit-page-1">
+      <section class="submit-page-1 page">
         <div class="row">
           <div class="col-md-12 text-center">
             <br>
@@ -167,7 +167,7 @@
     </section>
 
     <!--STORY-->
-    <section class="story">
+    <section class="story page">
       <div class="row">
           <div class="col-md-6 text-center story-text">
               <p class="introduction"></p>
@@ -178,13 +178,19 @@
           </div>
           <div class="col-md-6 story-image">
             <br>
-            <button id="list" type="button" class="btn btn-light submit list">See List of Adventures</button>
+            <p class="doctor-caption"></p>
+
           </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <button id="list" type="button" class="btn btn-light submit page">See List of Adventures</button>
+        </div>
       </div>
     </section>
 
     <!--TABLE -->
-    <section class="database-table">
+    <section class="database-table page">
       <div class="row">
             <div class="col-md-12">
                <br>
@@ -198,11 +204,18 @@
                         <th>Planet</th>
                         <th>Tool</th>
                         <th>With</th>
+                        <th>Delete</th>
                       </tr>
                 </thead>
                 <tbody class="table-body">
                       <tr class="table-information">
-
+                        <th>River Song</th>
+                        <th>Twelfth Doctor</th>
+                        <th>3045</th>
+                        <th>Earth</th>
+                        <th>Psychic Paper</th>
+                        <th>Captain Jack</th>
+                        <th>Delete</th>
                       </tr>
                 </tbody>
             </table>
