refactored to use data objects

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
              <option class="day-select" value="Clara">11</option>
              <option class="day-select" value="The Judoon">12</option>
              <option class="day-select" value="The Headless Monks">13</option>
-             <option class="day-select" value="The Weeping Angles">14</option>
+             <option class="day-select" value="The Weeping Angels">14</option>
              <option class="day-select" value="The Sontarans">15</option>
              <option class="day-select" value="The Daleks">16</option>
              <option class="day-select" value="The Cybermen">17</option>
@@ -122,7 +122,7 @@
              <option class="color-select" value="Earth">Red</option>
              <option class="color-select" value="Galifrey">Orange</option>
              <option class="color-select" value="Earth">Yellow</option>
-             <option class="color-select" value="New-Earth">Green</option>
+             <option class="color-select" value="New Earth">Green</option>
              <option class="color-select" value="Mars">Blue</option>
              <option class="color-select" value="Galifey">Indigo</option>
              <option class="color-select" value="New Earth">Violet</option>
@@ -184,11 +184,6 @@
 
           </div>
       </div>
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <
-        </div>
-      </div>
     </section>
 
     <!--TABLE -->
@@ -237,7 +232,6 @@
     </section>
 
     </div>
-    <script src="js/main.js"></script>
     <script src="js/main.js"></script>
     </body>
 </html>
